# os-lab-3

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ArrayUtils.h  core.h  logic.h
libs/Utils/: CMakeLists.txt
libs/Utils/src/: ArrayUtils.cpp
src/: ArrayUtils.cpp  CMakeLists.txt  core.cpp  main.cpp
tests/: ArrayUtils_test.cpp  CMakeLists.txt
